--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "PublishTest02-h5": "npm run build-h5 test2",
     "lint": "vue-cli-service lint",
     "mock": "json-server ./mock/data.json",
-    "start": "npm run serve-pc",
+    "start": "npm run serve-index",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -50,12 +50,16 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "filemanager-webpack-plugin": "^2.0.5",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
+    "ts-import-plugin": "^1.6.6",
     "typescript": "~3.8.3",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
