--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve-index": "vue-cli-service serve --mode index --port 9011",
-    "serve-h5": "vue-cli-service serve --mode h5 --port 9012",
+    "serve:index": "vue-cli-service serve --index --port 9011",
+    "serve:h5": "vue-cli-service serve --h5 --port 9012",
     "build-index": "vue-cli-service build index",
     "build-h5": "vue-cli-service build h5",
     "Release-index": "npm run build-index release",
@@ -17,7 +17,7 @@
     "PublishTest02-h5": "npm run build-h5 test2",
     "lint": "vue-cli-service lint",
     "mock": "json-server ./mock/data.json",
-    "start": "npm run serve-index",
+    "start": "npm run serve:index",
     "build": "vue-cli-service build"
   },
   "dependencies": {
