--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "Release:h5": "vue-cli-service build --mode prod h5",
     "lint": "vue-cli-service lint",
     "mock": "json-server ./mock/data.json",
-    "start": "npm run serve:index"
+    "start": "npm run serve:pc"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
+    "moment": "^2.27.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.5",
     "vue": "^2.6.11",
